# python-flask-api-blog

./: .gitignore  README.md  pyproject.toml  render-deploy.sh
migrations/versions/: 33d95f888ccd_initial_migration.py  3eb753256456_add_active_and_password_atribute_in_.py  99309898597c_add_role_table.py
src/: app.py  config.py  db.py  hello.py  utils.py  wsgi.py
src/controller/: auth.py  post.py  user.py
src/controllers/: auth.py  post.py  user.py
src/models/: __init__.py  base_model.py  post_model.py  role_model.py  user_model.py
src/views/: post_view.py  role_view.py  user_view.py
tests/src/: test_utils.py
tests/src/controller/: conftest.py  test_user.py
var/src.hello-instance/: blog.sqlite
